# tuigotchi-health

./: Cargo.toml  kitty_icon.ansi  outline.org  readme.md
src/: config.rs  default_config.yaml  interface.rs  main.rs  task.rs  task_manager.rs
src/animations/: debug_guy.txt  kitty.txt  puppy.txt
src/interface/: lil_guy.rs  visual.rs
